--- a/app/src/main/res/layout/adapter_thana.xml
+++ b/app/src/main/res/layout/adapter_thana.xml
@@ -9,7 +9,7 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     app:cardCornerRadius="12dp"
-    tools:context=".DistrictAdapter">
+    tools:context=".ThanaAdapter">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardView"
@@ -17,7 +17,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_district_name"
+            android:id="@+id/tv_thana_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="16dp"
