--- a/app/src/main/res/layout/fragment_thana_list.xml
+++ b/app/src/main/res/layout/fragment_thana_list.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/district_fragment_container"
+    android:id="@+id/thana_fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DistrictFragment">
+    tools:context=".ThanaFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/district_recyclerView"
+        android:id="@+id/thana_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
