--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <include layout="@layout/fragment_thana_list" />
+    <include layout="@layout/content_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
